added welcome to general

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 
-BOT_TOKEN=MTM0MTUyMTkzMDMzODk2MzUxNg.GS_RWh.O_aPNatHveQz_T-iOyhHc9PqHZp6Dei4BcBBK4
-CLIENT_ID=1341521930338963516
+BOT_TOKEN=
+CLIENT_ID=
